@@ -33,6 +33,16 @@ name|java
 operator|.
 name|io
 operator|.
+name|EOFException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
 name|IOException
 import|;
 end_import
@@ -1274,6 +1284,8 @@ operator|.
 name|delete
 argument_list|(
 name|p
+argument_list|,
+literal|true
 argument_list|)
 expr_stmt|;
 block|}
@@ -1314,6 +1326,8 @@ operator|.
 name|delete
 argument_list|(
 name|dir
+argument_list|,
+literal|true
 argument_list|)
 expr_stmt|;
 block|}
@@ -2448,6 +2462,8 @@ operator|.
 name|delete
 argument_list|(
 name|oldlogfile
+argument_list|,
+literal|true
 argument_list|)
 expr_stmt|;
 block|}
@@ -2489,6 +2505,25 @@ name|IOException
 name|e
 parameter_list|)
 block|{
+name|e
+operator|=
+name|RemoteExceptionHandler
+operator|.
+name|checkIOException
+argument_list|(
+name|e
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+operator|!
+operator|(
+name|e
+operator|instanceof
+name|EOFException
+operator|)
+condition|)
+block|{
 name|LOG
 operator|.
 name|warn
@@ -2508,6 +2543,7 @@ argument_list|,
 name|e
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 finally|finally
 block|{
@@ -2551,6 +2587,8 @@ index|]
 operator|.
 name|getPath
 argument_list|()
+argument_list|,
+literal|true
 argument_list|)
 expr_stmt|;
 block|}
